--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,9 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "@google/genai": "^1.12.0",
+    "@google/genai": "^1.13.0",
     "@google/generative-ai": "^0.24.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "init": "^0.1.2",
